<resources>
    <string name="app_name">VCA</string>
    <string name="app_title">VCA ya hoşgeldiniz</string>
    <string name="login_title">Giriş Yap</string>
    <string name="register_title">Kayıt Ol</string>

    <string name="usernameTextView">Ad - Soyad</string>
    <string name="emailTextView">E-Posta</string>
    <string name="passwordTextView">Şifre</string>
    <string name="registerButton">Kayıt Ol</string>
    <string name="loginButton">Giriş Yap</string>
    <string name="registerPageButton">Kayıt Ekranına Git</string>
    <string name="loginPageButton">Giriş Ekranına Git</string>

    <string name="logOutButton">Çıkış</string>
    <string name="callButton">Ara\n</string>
    <string name="removeButton">Kaldır\n</string>
    <string name="nobody">Anonim</string>
    <string name="permissionDeniedErrorTitle">İzin Hatası\n</string>
    <string name="permissionDeniedErrorBody">Gerekli izinler verilmediği için program kapatılıyor.</string>
    <string name="itemUserUsernameTextView">Kullanıcı Adı</string>
    <string name="itemUserCallButton">Ara</string>
    <string name="itemUserToggleFavoriteOn">F Ekle</string>
    <string name="itemUserToggleFavoriteOff">F Kaldır</string>
    <string name="welcomeTextView">Hoşgeldiniz</string>
    <string name="no_internet">İnternet bağlantısı yok\n</string>
    <string name="yesterday">Dün</string>
    <string name="today">Bugün</string>
    <string name="call_history">Arama Geçmişi</string>
    <string name="contacts">Kişiler</string>


</resources>